2004-03-30  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs: Do not override operand before we know if it is
	non-null.  Fix 56207

2004-03-29 Ben Maurer  <bmaurer@users.sourceforge.net>

	* typemanager.cs: support for pinned variables.

2004-03-29 Ben Maurer  <bmaurer@users.sourceforge.net>

	* decl.cs, typemanager.cs: Avoid using an arraylist
	as a buffer if there is only one result set.

2004-03-29 Ben Maurer  <bmaurer@users.sourceforge.net>

	* expression.cs: Make sure you cant call a static method
	with an instance expression, bug #56174.

2004-03-29  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (IsDuplicateImplementation): Improve error reporting to
	flag 663 (method only differs in parameter modifier).

	* cs-tokenizer.cs: Do not require whitespace when a ( or " will do
	in preprocessor directives.

	* location.cs (LookupFile): Allow for the empty path.

	* attribute.cs (DefinePInvokeMethod): Fix 56148;  I would like a
	better approach for some of that patch, but its failing with the
	CharSet enumeration.  For now try/catch will do.

	* typemanager.cs: Do not crash if a struct does not have fields.
	Fixes 56150.

2004-03-28 Ben Maurer  <bmaurer@users.sourceforge.net>

	* expression.cs: cs0213, cant fix a fixed expression.
	fixes 50231.

2004-03-28 Ben Maurer  <bmaurer@users.sourceforge.net>

	* cs-parser.jay: detect invalid embeded statements gracefully.
	bug #51113.

2004-03-28 Ben Maurer  <bmaurer@users.sourceforge.net>

	* ecore.cs, typemanager.cs: Correct impl of cs1540 check.
	As a regex:
	s/
	the invocation type may not be a subclass of the tye of the item/
	The type of the item must be a subclass of the invocation item.
	/g
	
	Fixes bug #50820.

2004-03-25  Sebastien Pouliot  <sebastien@ximian.com>

	* attribute.cs: Added methods to get a string and a bool from an
	attribute. Required to information from AssemblyKeyFileAttribute,
	AttributeKeyNameAttribute (string) and AssemblyDelaySign (bool).