@@ -2910,15 +2910,18 @@ namespace Mono.CSharp {
 			return true;
 		}
 
-		MethodInfo GetAccessor (Type invocation_type, string accessor_name)
+		MethodInfo GetAccessor (Type invocation_type, MethodInfo accessor)
 		{
+			if (accessor == null)
+				return null;
+
 			BindingFlags flags = BindingFlags.Public | BindingFlags.NonPublic |
 				BindingFlags.Static | BindingFlags.Instance;
 			MemberInfo[] group;
 
 			group = TypeManager.MemberLookup (
 				invocation_type, invocation_type, PropertyInfo.DeclaringType,
-				MemberTypes.Method, flags, accessor_name + "_" + PropertyInfo.Name);
+				MemberTypes.Method, flags, accessor.Name);
 
 			//
 			// The first method is the closest to us
@@ -2987,11 +2990,11 @@ namespace Mono.CSharp {
 		//
 		void ResolveAccessors (EmitContext ec)
 		{
-			getter = GetAccessor (ec.ContainerType, "get");
+			getter = GetAccessor (ec.ContainerType, PropertyInfo.GetGetMethod());
 			if ((getter != null) && getter.IsStatic)
 				is_static = true;
 
-			setter = GetAccessor (ec.ContainerType, "set");
+			setter = GetAccessor (ec.ContainerType, PropertyInfo.GetSetMethod());
 			if ((setter != null) && setter.IsStatic)
 				is_static = true;
 
